for idaholab/Malcolm#20; zeek intel fields normalization

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -96,6 +96,7 @@ network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:P
 network.vlan.id=db:network.vlan.id;group:malcolm;kind:lotermfield;friendly:VLAN ID;help:VLAN ID
 related.hash=db:related.hash;group:malcolm;kind:termfield;friendly:Related Hash;help:Related Hash
 related.ip=db:related.ip;group:malcolm;kind:termfield;friendly:Related IP;help:Related IP
+related.hosts=db:related.hosts;group:malcolm;kind:termfield;friendly:Related Host;help:Related Host
 related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
 source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
@@ -488,8 +489,8 @@ zeek.http.post_password_plain=db:zeek.http.post_password_plain;group:zeek_http;k
 
 # intel.log
 # https://docs.zeek.org/en/stable/scripts/base/frameworks/intel/main.zeek.html#type-Intel::Info
-zeek.intel.indicator=db:zeek.intel.indicator;group:zeek_intel;kind:termfield;friendly:Indicator;help:Indicator
-zeek.intel.indicator_type=db:zeek.intel.indicator_type;group:zeek_intel;kind:termfield;friendly:Indicator Type;help:Indicator Type
+zeek.intel.seen_indicator=db:zeek.intel.seen_indicator;group:zeek_intel;kind:termfield;friendly:Indicator;help:Indicator
+zeek.intel.seen_indicator_type=db:zeek.intel.seen_indicator_type;group:zeek_intel;kind:termfield;friendly:Indicator Type;help:Indicator Type
 zeek.intel.seen_where=db:zeek.intel.seen_where;group:zeek_intel;kind:termfield;friendly:Where Discovered;help:Where Discovered
 zeek.intel.seen_node=db:zeek.intel.seen_node;group:zeek_intel;kind:termfield;friendly:Discovered Node;help:Discovered Node
 zeek.intel.matched=db:zeek.intel.matched;group:zeek_intel;kind:termfield;friendly:Match Indicator;help:Match Indicator
@@ -1240,7 +1241,7 @@ zeek_files=require:zeek.files;title:Zeek files.log;fields:zeek.files.tx_hosts,ze
 zeek_ftp=require:zeek.ftp;title:Zeek ftp.log;fields:zeek.ftp.command,zeek.ftp.arg,zeek.ftp.mime_type,zeek.ftp.file_size,zeek.ftp.reply_code,zeek.ftp.reply_msg,zeek.ftp.data_channel_passive,zeek.ftp.data_channel_orig_h,zeek.ftp.data_channel_resp_h,zeek.ftp.data_channel_resp_p
 zeek_gquic=require:zeek.gquic;title:Zeek gquic.log;fields:zeek.gquic.version,zeek.gquic.server_name,zeek.gquic.user_agent,zeek.gquic.tag_count,zeek.gquic.cyu,zeek.gquic.cyutags
 zeek_http=require:zeek.http;title:Zeek http.log;fields:zeek.http.trans_depth,zeek.http.method,zeek.http.host,zeek.http.uri,zeek.http.origin,zeek.http.post_password_plain,zeek.http.post_username,zeek.http.referrer,zeek.http.version,zeek.http.user_agent,zeek.http.request_body_len,zeek.http.response_body_len,zeek.http.status_code,zeek.http.status_msg,zeek.http.info_code,zeek.http.info_msg,zeek.http.tags,zeek.http.proxied,zeek.http.orig_fuids,zeek.http.orig_filenames,zeek.http.orig_mime_types,zeek.http.resp_fuids,zeek.http.resp_filenames,zeek.http.resp_mime_types
-zeek_intel=require:zeek.intel;title:Zeek intel.log;fields:zeek.intel.cif_tags,zeek.intel.cif_confidence,zeek.intel.cif_source,zeek.intel.cif_description,zeek.intel.cif_firstseen,zeek.intel.cif_lastseen,zeek.intel.indicator,zeek.intel.indicator_type,zeek.intel.seen_where,zeek.intel.seen_node,zeek.intel.matched,zeek.intel.sources,zeek.intel.file_mime_type,zeek.intel.file_description
+zeek_intel=require:zeek.intel;title:Zeek intel.log;fields:zeek.intel.cif_tags,zeek.intel.cif_confidence,zeek.intel.cif_source,zeek.intel.cif_description,zeek.intel.cif_firstseen,zeek.intel.cif_lastseen,zeek.intel.seen_indicator,zeek.intel.seen_indicator_type,zeek.intel.seen_where,zeek.intel.seen_node,zeek.intel.matched,zeek.intel.sources,zeek.intel.file_mime_type,zeek.intel.file_description
 zeek_ipsec=require:zeek.ipsec;title:Zeek ipsec.log;fields:zeek.ipsec.is_orig,zeek.ipsec.initiator_spi,zeek.ipsec.responder_spi,zeek.ipsec.maj_ver,zeek.ipsec.min_ver,zeek.ipsec.exchange_type,zeek.ipsec.flag_e,zeek.ipsec.flag_c,zeek.ipsec.flag_a,zeek.ipsec.flag_i,zeek.ipsec.flag_v,zeek.ipsec.flag_r,zeek.ipsec.flags,zeek.ipsec.message_id,zeek.ipsec.vendor_ids,zeek.ipsec.notify_messages,zeek.ipsec.transforms,zeek.ipsec.ke_dh_groups,zeek.ipsec.proposals,zeek.ipsec.certificates,zeek.ipsec.transform_attributes,zeek.ipsec.length,zeek.ipsec.hash
 zeek_irc=require:zeek.irc;title:Zeek irc.log;fields:zeek.irc.nick,zeek.irc.command,zeek.irc.value,zeek.irc.addl,zeek.irc.dcc_file_name,zeek.irc.dcc_file_size,zeek.irc.dcc_mime_type
 zeek_iso_cotp=require:zeek.iso_cotp;title:Zeek iso_cotp.log;fields:zeek.iso_cotp.pdu_type
