--- a/logstash/pipelines/enrichment/98_make_unique.conf
+++ b/logstash/pipelines/enrichment/98_make_unique.conf
@@ -2,6 +2,28 @@
 
 filter {
 
+  # all hashed values #########################################################
+  if ([related][hash]) {
+    ruby {
+      id => "ruby_related_hash_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][hash]"
+      }
+    }
+  }
+
+  # all host identifiers #########################################################
+  if ([related][hosts]) {
+    ruby {
+      id => "ruby_related_hosts_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][hosts]"
+      }
+    }
+  }
+
   # all IP addresses ##########################################################
   if ([related][ip]) {
     ruby {
@@ -9,6 +31,17 @@ filter {
       path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
       script_params => {
         "field" => "[related][ip]"
+      }
+    }
+  }
+
+  # all users #################################################################
+  if ([related][user]) {
+    ruby {
+      id => "ruby_related_user_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][user]"
       }
     }
   }
