--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1,5 +1,44 @@
 filter {
 
+  # Zeek intel indicators depending on indicator type #################################################################
+  if ([zeek][intel][seen_indicator]) and ([zeek][intel][seen_indicator_type]) {
+
+    if ([zeek][intel][seen_indicator_type] == "Intel::ADDR") {
+      # ECS - ADDR-type intel indicators to related.ip
+      mutate { id => "mutate_merge_field_related_ip_zeek_intel_addr"
+               merge => { "[related][ip]" => "[zeek][intel][seen_indicator]" } }
+
+    } else if ([zeek][intel][seen_indicator_type] == "Intel::URL") {
+      # ECS - URL-type intel indicators to url.original
+      if (![url][original]) {
+        mutate { id => "mutate_merge_field_related_ip_zeek_intel_url"
+                 merge => { "[url][original]" => "[zeek][intel][seen_indicator]" } }
+      }
+
+    } else if ([zeek][intel][seen_indicator_type] == "Intel::DOMAIN") {
+      # ECS - DOMAIN-type intel indicators to related.hosts
+      mutate { id => "mutate_merge_field_related_ip_zeek_intel_domain"
+               merge => { "[related][hosts]" => "[zeek][intel][seen_indicator]" } }
+
+    } else if ([zeek][intel][seen_indicator_type] == "Intel::USER_NAME") {
+      # ECS - USER_NAME-type intel indicators to related.user
+      mutate { id => "mutate_merge_field_related_ip_zeek_intel_user"
+               merge => { "[related][user]" => "[zeek][intel][seen_indicator]" } }
+
+    } else if ([zeek][intel][seen_indicator_type] == "Intel::FILE_HASH") {
+      # ECS - FILE_HASH-type intel indicators to related.hash
+      mutate { id => "mutate_merge_field_related_ip_zeek_intel_hash"
+               merge => { "[related][hash]" => "[zeek][intel][seen_indicator]" } }
+
+    } else if ([zeek][intel][seen_indicator_type] == "Intel::FILE_NAME") {
+      # ECS - FILE_NAME-type intel indicators to file.path
+      if (![file][path]) {
+        mutate { id => "mutate_merge_field_related_ip_zeek_intel_file_name"
+                 merge => { "[file][path]" => "[zeek][intel][seen_indicator]" } }
+      }
+    }
+  }
+
   # Protocol/service version ##########################################################################################
   # collect protocol version under the parent network.protocol_version array
 
@@ -1062,6 +1101,11 @@ filter {
   if ([zeek][x509][fingerprint]) {               mutate { id => "mutate_merge_field_related_hash_zeek_x509_fingerprint"
                                                           merge => { "[related][hash]" => "[zeek][x509][fingerprint]" } } }
 
+  # Hosts and domains #################################################################################################
+  # ECS - various -> related.hosts (a lot of these are actually done in the enrichment pipeline)
+  if ([zeek][gquic][server_name]) {              mutate { id => "mutate_merge_field_related_hosts"
+                                                          merge => { "[related][hosts]" => "[zeek][gquic][server_name]" } } }
+
   # IP addresses ######################################################################################################
   # ECS - various -> related.ip (all IP-type fields get rolled up into related.ip)
   if ([zeek][dhcp][assigned_ip]) {              mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_assigned_ip"
@@ -1116,4 +1160,5 @@ filter {
                                                          merge => { "[related][ip]" => "[zeek][stun_nat][wan_addr]" } } }
   if ([zeek][stun_nat][lan_addr]) {             mutate { id => "mutate_merge_field_related_ip_zeek_stun_nat_lan_addr"
                                                          merge => { "[related][ip]" => "[zeek][stun_nat][lan_addr]" } } }
+
 }
