--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -6,9 +6,26 @@ filter {
 
   # hostnames
   if ([source][hostname]) {            mutate { id => "mutate_add_field_ecs_client_domain_source_hostname"
-                                                   add_field => { "[client][domain]" => "%{[source][hostname]}" } } }
-  if ([destination][hostname]) {            mutate { id => "mutate_add_field_ecs_server_domain_destination_hostname"
-                                                   add_field => { "[server][domain]" => "%{[destination][hostname]}" } } }
+                                                add_field => { "[client][domain]" => "%{[source][hostname]}" } } }
+  if ([destination][hostname]) {       mutate { id => "mutate_add_field_ecs_server_domain_destination_hostname"
+                                                add_field => { "[server][domain]" => "%{[destination][hostname]}" } } }
+
+  # ECS - various -> related.hosts (hostnames, domain names, workstation names, aliases, etc.)
+  if ([smb][host]) {                   mutate { id => "mutate_merge_ecs_related_hosts_smb_host"
+                                                merge => { "[related][hosts]" => "[smb][host]" } } }
+  if ([http][host]) {                  mutate { id => "mutate_merge_ecs_related_hosts_http_host"
+                                                merge => { "[related][hosts]" => "[http][host]" } } }
+  if ([tls][client][server_name]) {    mutate { id => "mutate_merge_ecs_related_hosts_tls_client_server_name"
+                                                merge => { "[related][hosts]" => "[tls][client][server_name]" } } }
+  if ([source][hostname]) {            mutate { id => "mutate_merge_ecs_related_hosts_source_hostname"
+                                                merge => { "[related][hosts]" => "[source][hostname]" } } }
+  if ([destination][hostname]) {       mutate { id => "mutate_merge_ecs_related_hosts_destination_hostname"
+                                                merge => { "[related][hosts]" => "[destination][hostname]" } } }
+  if ([client][domain]) {              mutate { id => "mutate_merge_ecs_related_hosts_client_domain"
+                                                merge => { "[related][hosts]" => "[client][domain]" } } }
+  if ([server][domain]) {              mutate { id => "mutate_merge_ecs_related_hosts_server_domain"
+                                                merge => { "[related][hosts]" => "[server][domain]" } } }
+
   # network.direction (from tags assigned during 11_lookups.conf)
   if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
     mutate { id => "mutate_add_field_metadata_network_direction_internal"
