--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -136,6 +136,7 @@ services:
       << : *process-variables
       logger.level : 'WARN'
       bootstrap.memory_lock : 'true'
+      MAX_LOCKED_MEMORY : 'unlimited'
       OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true'
       VIRTUAL_HOST : 'os.malcolm.local'
       discovery.type : 'single-node'
