--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -343,6 +343,8 @@ services:
       memlock:
         soft: -1
         hard: -1
+    cap_add:
+      - IPC_LOCK
     depends_on:
       - opensearch
     volumes:
