for idaholab/Malcolm#20; zeek intel fields normalization

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -39,6 +39,32 @@ filter {
     }
   }
 
+  if ([zeek][intel][seen_where] =~ /^(DNS|HTTP|SMTP|SSL|SSH|SMB|X509)::/) and (![network][protocol]) {
+    # use zeel.intel.seen_where to map to service
+    # https://docs.zeek.org/en/master/scripts/base/frameworks/intel/main.zeek.html#type-Intel::Wheres
+    grok {
+      id => "grok_zeek_intel_seen_where"
+      match => { "[zeek][intel][seen_where]" => [ "^%{DATA:[@metadata][intel_seen_where]}::%{GREEDYDATA:[@metadata][intel_seen_where_sub]}$" ] }
+    }
+    if ([@metadata][intel_seen_where]) {
+      translate {
+        id => "translate_zeek_intel_seen_where"
+        source => "[@metadata][intel_seen_where]"
+        target => "[network][protocol]"
+        dictionary => {
+          "DNS" => "dns"
+          "HTTP" => "http"
+          "SMTP" => "smtp"
+          "SSL" => "tls"
+          "SSH" => "ssh"
+          "SMB" => "smb"
+          "X509" => "X.509"
+        }
+        fallback => "%{[@metadata][intel_seen_where]}"
+      }
+    }
+  }
+
   # Protocol/service version ##########################################################################################
   # collect protocol version under the parent network.protocol_version array
 
