--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -282,7 +282,7 @@ services:
       << : *nginx-variables
       << : *common-upload-variables
       << : *common-beats-variables
-      FILEBEAT_LOG_PATH : '/data/zeek/current'
+      FILEBEAT_ZEEK_LOG_PATH : '/data/zeek/current'
       FILEBEAT_NGINX_LOG_PATH : '/data/nginx'
       FILEBEAT_LOG_CLEANUP_MINUTES : 180
       FILEBEAT_ZIP_CLEANUP_MINUTES : 360
