--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5255,6 +5255,52 @@ filter {
     if ([zeek][signatures][event_message]) {    mutate { id => "mutate_add_field_ecs_rule_id_signature_event_message"
                                                     merge => { "[rule][description]" => "[zeek][signatures][event_message]" } } }
 
+    if ('Capa' in [zeek][signatures][engine]) {
+      # ECS - populate threat information for MITRE ATT&CK techniques specified by capa hits
+      ruby {
+          id => "ruby_signatures_attack_extract"
+          # matches array is like: 1) tactic name, 2) technique name, 3) sub-technique name, 4) technique number
+          # <MatchData
+          #  "Persistence::Create or Modify System Process::Windows Service [ATT&CK T1543.003]"
+          #    1:"Persistence"
+          #    2:"Create or Modify System Process"
+          #    3:"Windows Service"
+          #    4:"T1543.003">,
+          # <MatchData
+          #  "Execution::Shared Modules [ATT&CK T1129]"
+          #    1:"Execution"
+          #    2:"Shared Modules"
+          #    3:nil
+          #    4:"T1129">
+          init => "
+            require 'yaml'; $tacticIdMap = YAML.load(File.read('/etc/mitre_attack_tactic_ids.yaml')); $tacticRefMap = YAML.load(File.read('/etc/mitre_attack_tactic_reference.yaml'));
+          "
+          code => "
+            matches = Array.new
+            begin
+              event.get('[zeek][signatures][signature_id]').each do |signature|
+                matches.push(/(.+?)::(.+?)(?:::(.+?))?\s*\[ATT&CK\s*(.+?)\]/.match(signature))
+              end
+            rescue Exception => e
+              event.set('ruby_exception', 'ruby_signatures_attack_extract: ' + e.message)
+            end
+            if (matches.length > 0) then
+                tacticNames = matches.map{ |x| x[1].gsub(' ', '_') }.compact
+                tacticIds = tacticNames.map{ |x| $tacticIdMap[x] }.compact
+                tacticRefs = tacticNames.map{ |x| $tacticRefMap[x] }.compact
+                techniqueNames = matches.map{ |x| [x[2], x[3]].compact.join(':') }.compact
+                techniqueIds = matches.map{ |x| x[4] }.compact
+                event.set('[threat][tactic][name]', tacticNames.uniq) unless (tacticNames.length == 0)
+                event.set('[threat][tactic][id]', tacticIds.uniq) unless (tacticIds.length == 0)
+                event.set('[threat][tactic][reference]', tacticRefs.uniq) unless (tacticRefs.length == 0)
+                event.set('[threat][technique][name]', techniqueNames.uniq) unless (techniqueNames.length == 0)
+                event.set('[threat][technique][id]', techniqueIds.uniq) unless (techniqueIds.length == 0)
+                event.set('[threat][framework]', 'MITRE ATT&CK')
+            end
+          "
+      }
+    } # Capa
+
   } else if ([log_source] == "sip") {
     #############################################################################################################################
     # sip.log specific logic
