fix idaholab/Malcolm#71, type mismatch for network.vlan.id between Malcolm and Arkime definitions

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -89,11 +89,11 @@ event.risk_score=db:event.risk_score;group:malcolm;kind:float;friendly:Risk Scor
 event.risk_score_norm=db:event.risk_score_norm;group:malcolm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
 event.severity=db:event.severity;group:malcolm;kind:integer;friendly:Severity;help:Severity
 event.severity_tags=db:event.severity_tags;group:malcolm;kind:termfield;friendly:Severity Tags;help:Severity Tags
-network.inner.vlan.id=db:network.inner.vlan.id;group:malcolm;kind:lotermfield;friendly:Inner VLAN ID;help:Inner VLAN ID
+network.inner.vlan.id=db:network.inner.vlan.id;group:malcolm;kind:integer;friendly:Inner VLAN ID;help:Inner VLAN ID
 network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Service;help:Service
 network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
 network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:Protocol;help:Protocol
-network.vlan.id=db:network.vlan.id;group:malcolm;kind:lotermfield;friendly:VLAN ID;help:VLAN ID
+network.vlan.id=db:network.vlan.id;group:malcolm;kind:integer;friendly:VLAN ID;help:VLAN ID
 related.hash=db:related.hash;group:malcolm;kind:termfield;friendly:Related Hash;help:Related Hash
 related.ip=db:related.ip;group:malcolm;kind:termfield;friendly:Related IP;help:Related IP
 related.hosts=db:related.hosts;group:malcolm;kind:termfield;friendly:Related Host;help:Related Host
