--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5056,7 +5056,8 @@ filter {
       if ([zeek][notice][sub_category]) { mutate { id => "mutate_add_field_ecs_threat_technique_name_eternal"
                                                   add_field => { "[threat][technique][name]" => "%{[zeek][notice][sub_category]}" } } }
       if ([rule][reference])           { mutate { id => "mutate_add_field_ecs_threat_technique_reference_eternal"
-                                                  add_field => { "[threat][technique][reference]" => "%{[rule][reference]}" } } }
+                                                  add_field => { "[threat][tactic][reference]" => "%{[rule][reference]}"
+                                                                 "[threat][technique][reference]" => "%{[rule][reference]}" } } }
     }
 
     if (([zeek][notice][category] =~ /^CVE/) or
@@ -5273,7 +5274,7 @@ filter {
           #    3:nil
           #    4:"T1129">
           init => "
-            require 'yaml'; $tacticIdMap = YAML.load(File.read('/etc/mitre_attack_tactic_ids.yaml')); $tacticRefMap = YAML.load(File.read('/etc/mitre_attack_tactic_reference.yaml'));
+            require 'yaml'; $tacticIdMap = YAML.load(File.read('/etc/mitre_attack_tactic_ids.yaml'));
           "
           code => "
             matches = Array.new
@@ -5286,15 +5287,17 @@ filter {
             end
             if (matches.length > 0) then
                 tacticNames = matches.map{ |x| x[1].gsub(' ', '_') }.compact
-                tacticIds = tacticNames.map{ |x| $tacticIdMap[x] }.compact
-                tacticRefs = tacticNames.map{ |x| $tacticRefMap[x] }.compact
+                tacticIds = tacticNames.clone.map(&:clone).map{ |x| $tacticIdMap[x] }.compact
+                tacticRefs = tacticIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/tactics/') }.uniq.compact
                 techniqueNames = matches.map{ |x| [x[2], x[3]].compact.join(':') }.compact
                 techniqueIds = matches.map{ |x| x[4] }.compact
+                techniqueRefs = techniqueIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/techniques/') }.uniq.compact
                 event.set('[threat][tactic][name]', tacticNames.uniq) unless (tacticNames.length == 0)
                 event.set('[threat][tactic][id]', tacticIds.uniq) unless (tacticIds.length == 0)
                 event.set('[threat][tactic][reference]', tacticRefs.uniq) unless (tacticRefs.length == 0)
                 event.set('[threat][technique][name]', techniqueNames.uniq) unless (techniqueNames.length == 0)
                 event.set('[threat][technique][id]', techniqueIds.uniq) unless (techniqueIds.length == 0)
+                event.set('[threat][technique][reference]', techniqueRefs.uniq) unless (techniqueRefs.length == 0)
                 event.set('[threat][framework]', 'MITRE ATT&CK')
             end
           "
