--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -13,6 +13,7 @@ export PCAP_PRUNE_CHECK_SECONDS=60
 export ARKIME_VIEWER_PORT=8005
 export ARKIME_PACKET_THREADS=5
 export ARKIME_PACKET_ACL=
+export ARKIME_ECS_PROVIDER=arkime
 
 export PROTOLOGBEAT_PORT=9515
 export PROTOLOGBEAT_INTERVAL=10
