--- a/sensor-iso/interface/sensor_ctl/supervisor.d/arkime.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/arkime.conf
@@ -28,6 +28,7 @@ command=/opt/arkime/bin/capture %(ENV_ARKIME_HTTPS_FLAG)s
   -o rulesFiles="%(ENV_SUPERVISOR_PATH)s"/arkime/rules.yml
   -o parsersDir=/opt/arkime/parsers
   -o pluginsDir=/opt/arkime/plugins
+  -o ecsEventProvider="%(ENV_ARKIME_ECS_PROVIDER)s"
   --node "%(ENV_ARKIME_NODE_NAME)s"
   --host "%(ENV_ARKIME_NODE_HOST)s"
 startsecs=30
