adding opcua-binary parser

--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -11,10 +11,10 @@ filter {
     convert => {
       "[zeek][bacnet][invoke_id]" => "integer"
       "[zeek][bacnet_discovery][instance_number]" => "integer"
-      "[zeek][bacnet_discovery][range_low]" => "integer"
       "[zeek][bacnet_discovery][range_high]" => "integer"
-      "[zeek][bacnet_property][instance_number]" => "integer"
+      "[zeek][bacnet_discovery][range_low]" => "integer"
       "[zeek][bacnet_property][array_index]" => "integer"
+      "[zeek][bacnet_property][instance_number]" => "integer"
       "[zeek][bsap_ip_header][type_name]" => "integer"
       "[zeek][bsap_ip_rdb][data_len]" => "integer"
       "[zeek][bsap_ip_rdb][header_size]" => "integer"
@@ -40,10 +40,10 @@ filter {
       "[zeek][conn][duration]" => "float"
       "[zeek][dce_rpc][rtt]" => "float"
       "[zeek][dhcp][duration]" => "float"
-      "[zeek][dnp3_control][index_number]" => "integer"
       "[zeek][dnp3_control][execute_count]" => "integer"
-      "[zeek][dnp3_control][on_time]" => "integer"
+      "[zeek][dnp3_control][index_number]" => "integer"
       "[zeek][dnp3_control][off_time]" => "integer"
+      "[zeek][dnp3_control][on_time]" => "integer"
       "[zeek][dnp3_objects][object_count]" => "integer"
       "[zeek][dnp3_objects][range_high]" => "integer"
       "[zeek][dnp3_objects][range_low]" => "integer"
@@ -51,25 +51,25 @@ filter {
       "[zeek][ecat_log_address][length]" => "integer"
       "[zeek][enip][length]" => "integer"
       "[zeek][intel][cif_confidence]" => "float"
-      "[zeek][ipsec][maj_ver]" => "integer"
-      "[zeek][ipsec][min_ver]" => "integer"
       "[zeek][ipsec][exchange_type]" => "integer"
       "[zeek][ipsec][ke_dh_groups]" => "integer"
-      "[zeek][ipsec][proposals]" => "integer"
       "[zeek][ipsec][length]" => "integer"
+      "[zeek][ipsec][maj_ver]" => "integer"
+      "[zeek][ipsec][min_ver]" => "integer"
+      "[zeek][ipsec][proposals]" => "integer"
       "[zeek][ldap][version]" => "integer"
       "[zeek][ldap_search][result_count]" => "integer"
-      "[zeek][modbus_detailed][unit_id]" => "integer"
       "[zeek][modbus_detailed][address]" => "integer"
       "[zeek][modbus_detailed][quantity]" => "integer"
-      "[zeek][modbus_mask_write_register][unit_id]" => "integer"
+      "[zeek][modbus_detailed][unit_id]" => "integer"
       "[zeek][modbus_mask_write_register][address]" => "integer"
       "[zeek][modbus_mask_write_register][and_mask]" => "integer"
       "[zeek][modbus_mask_write_register][or_mask]" => "integer"
+      "[zeek][modbus_mask_write_register][unit_id]" => "integer"
+      "[zeek][modbus_read_write_multiple_registers][read_quantity]" => "integer"
+      "[zeek][modbus_read_write_multiple_registers][read_start_address]" => "integer"
       "[zeek][modbus_read_write_multiple_registers][unit_id]" => "integer"
       "[zeek][modbus_read_write_multiple_registers][write_start_address]" => "integer"
-      "[zeek][modbus_read_write_multiple_registers][read_start_address]" => "integer"
-      "[zeek][modbus_read_write_multiple_registers][read_quantity]" => "integer"
       "[zeek][mqtt_publish][payload_len]" => "integer"
       "[zeek][mqtt_subscribe][granted_qos_level]" => "integer"
       "[zeek][mqtt_subscribe][qos_levels]" => "integer"
@@ -79,12 +79,64 @@ filter {
       "[zeek][ntp][root_delay]" => "float"
       "[zeek][ntp][root_disp]" => "float"
       "[zeek][ntp][version]" => "integer"
-      "[zeek][ospf][version]" => "integer"
+      "[zeek][opcua_binary][encoding_mask]" => "integer"
+      "[zeek][opcua_binary][error]" => "integer"
+      "[zeek][opcua_binary][identifier]" => "integer"
+      "[zeek][opcua_binary][max_chunk_cnt]" => "integer"
+      "[zeek][opcua_binary][max_msg_size]" => "integer"
+      "[zeek][opcua_binary][msg_size]" => "integer"
+      "[zeek][opcua_binary][namespace_idx]" => "integer"
+      "[zeek][opcua_binary][rcv_buf_size]" => "integer"
+      "[zeek][opcua_binary][rcv_cert_len]" => "integer"
+      "[zeek][opcua_binary][req_hdr_add_hdr_enc_mask]" => "integer"
+      "[zeek][opcua_binary][req_hdr_add_hdr_type_id]" => "integer"
+      "[zeek][opcua_binary][req_hdr_node_id_namespace_idx]" => "integer"
+      "[zeek][opcua_binary][req_hdr_node_id_numeric]" => "integer"
+      "[zeek][opcua_binary][req_hdr_request_handle]" => "integer"
+      "[zeek][opcua_binary][req_hdr_return_diag]" => "integer"
+      "[zeek][opcua_binary][request_id]" => "integer"
+      "[zeek][opcua_binary][res_hdr_add_hdr_enc_mask]" => "integer"
+      "[zeek][opcua_binary][res_hdr_add_hdr_type_id]" => "integer"
+      "[zeek][opcua_binary][res_hdr_request_handle]" => "integer"
+      "[zeek][opcua_binary][res_hdr_service_diag_encoding]" => "integer"
+      "[zeek][opcua_binary][res_hdr_service_result]" => "integer"
+      "[zeek][opcua_binary][sec_channel_id]" => "integer"
+      "[zeek][opcua_binary][sec_policy_uri_len]" => "integer"
+      "[zeek][opcua_binary][seq_number]" => "integer"
+      "[zeek][opcua_binary][snd_buf_size]" => "integer"
+      "[zeek][opcua_binary][snd_cert_len]" => "integer"
+      "[zeek][opcua_binary][version]" => "integer"
+      "[zeek][opcua_binary_diag_info_detail][inner_diag_level]" => "integer"
+      "[zeek][opcua_binary_diag_info_detail][locale]" => "integer"
+      "[zeek][opcua_binary_diag_info_detail][locale_txt]" => "integer"
+      "[zeek][opcua_binary_diag_info_detail][namespace_uri]" => "integer"
+      "[zeek][opcua_binary_diag_info_detail][symbolic_id]" => "integer"
+      "[zeek][opcua_binary_get_endpoints][application_type]" => "integer"
+      "[zeek][opcua_binary_get_endpoints][cert_size]" => "integer"
+      "[zeek][opcua_binary_get_endpoints][encoding_mask]" => "integer"
+      "[zeek][opcua_binary_get_endpoints][message_security_mode]" => "integer"
+      "[zeek][opcua_binary_get_endpoints][security_level]" => "integer"
+      "[zeek][opcua_binary_get_endpoints_user_token][user_token_type]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][client_proto_ver]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][message_security_mode]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][req_lifetime]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][sec_token_id]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][sec_token_request_type]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][sec_token_revised_time]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][sec_token_sec_channel_id]" => "integer"
+      "[zeek][opcua_binary_opensecure_channel][server_proto_ver]" => "integer"
+      "[zeek][opcua_binary_status_code_detail][historian_bits]" => "integer"
+      "[zeek][opcua_binary_status_code_detail][info_type]" => "integer"
+      "[zeek][opcua_binary_status_code_detail][limit_bits]" => "integer"
+      "[zeek][opcua_binary_status_code_detail][severity]" => "integer"
+      "[zeek][opcua_binary_status_code_detail][source]" => "integer"
+      "[zeek][opcua_binary_status_code_detail][sub_code]" => "integer"
       "[zeek][ospf][interface_id]" => "integer"
       "[zeek][ospf][metrics]" => "integer"
-      "[zeek][ospf][route_tags]" => "integer"
       "[zeek][ospf][neighbor_interface_id]" => "integer"
       "[zeek][ospf][prefix]" => "integer"
+      "[zeek][ospf][route_tags]" => "integer"
+      "[zeek][ospf][version]" => "integer"
       "[zeek][s7comm][item_count]" => "integer"
       "[zeek][signatures][host_count]" => "integer"
       "[zeek][signatures][signature_count]" => "integer"
@@ -93,12 +145,12 @@ filter {
       "[zeek][smb_files][data_len_rsp]" => "integer"
       "[zeek][smb_files][data_offset_req]" => "integer"
       "[zeek][stun_nat][wan_port]" => "integer"
-      "[zeek][tftp][size]" => "integer"
-      "[zeek][tftp][block_sent]" => "integer"
       "[zeek][tftp][block_acked]" => "integer"
+      "[zeek][tftp][block_sent]" => "integer"
       "[zeek][tftp][error_code]" => "integer"
-      "[zeek][wireguard][sender_index]" => "integer"
+      "[zeek][tftp][size]" => "integer"
       "[zeek][wireguard][receiver_index]" => "integer"
+      "[zeek][wireguard][sender_index]" => "integer"
     }
   }
 
@@ -183,6 +235,19 @@ filter {
     }
   }
 
+  if ([zeek][ocsp][nextUpdate]) {
+    if ([zeek][ocsp][nextUpdate] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_ocsp_nextUpdate_zero"
+               remove_field => [ "[zeek][ocsp][nextUpdate]" ] }
+    } else {
+      date {
+        id => "date_zeek_ocsp_nextUpdate"
+        match => [ "[zeek][ocsp][nextUpdate]", "UNIX" ]
+        target => "[zeek][ocsp][nextUpdate]"
+      }
+    }
+  }
+
   if ([zeek][ocsp][revoketime]) {
     if ([zeek][ocsp][revoketime] == "0.000000") {
       mutate { id => "mutate_remove_field_zeek_ocsp_revoketime_zero"
@@ -209,15 +274,54 @@ filter {
     }
   }
 
-  if ([zeek][ocsp][nextUpdate]) {
-    if ([zeek][ocsp][nextUpdate] == "0.000000") {
-      mutate { id => "mutate_remove_field_zeek_ocsp_nextUpdate_zero"
-               remove_field => [ "[zeek][ocsp][nextUpdate]" ] }
+  if ([zeek][opcua_binary][req_hdr_timeout_hint]) {
+    if ([zeek][opcua_binary][req_hdr_timeout_hint] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_req_hdr_timeout_hint_zero"
+               remove_field => [ "[zeek][opcua_binary][req_hdr_timeout_hint]" ] }
     } else {
       date {
-        id => "date_zeek_ocsp_nextUpdate"
-        match => [ "[zeek][ocsp][nextUpdate]", "UNIX" ]
-        target => "[zeek][ocsp][nextUpdate]"
+        id => "date_zeek_opcua_binary_req_hdr_timeout_hint"
+        match => [ "[zeek][opcua_binary][req_hdr_timeout_hint]", "UNIX" ]
+        target => "[zeek][opcua_binary][req_hdr_timeout_hint]"
+      }
+    }
+  }
+
+  if ([zeek][opcua_binary][req_hdr_timestamp]) {
+    if ([zeek][opcua_binary][req_hdr_timestamp] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_req_hdr_timestamp_zero"
+               remove_field => [ "[zeek][opcua_binary][req_hdr_timestamp]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_req_hdr_timestamp"
+        match => [ "[zeek][opcua_binary][req_hdr_timestamp]", "UNIX" ]
+        target => "[zeek][opcua_binary][req_hdr_timestamp]"
+      }
+    }
+  }
+
+  if ([zeek][opcua_binary][res_hdr_timestamp]) {
+    if ([zeek][opcua_binary][res_hdr_timestamp] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_res_hdr_timestamp_zero"
+               remove_field => [ "[zeek][opcua_binary][res_hdr_timestamp]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_res_hdr_timestamp"
+        match => [ "[zeek][opcua_binary][res_hdr_timestamp]", "UNIX" ]
+        target => "[zeek][opcua_binary][res_hdr_timestamp]"
+      }
+    }
+  }
+
+  if ([zeek][opcua_binary_opensecure_channel][sec_token_created_at]) {
+    if ([zeek][opcua_binary_opensecure_channel][sec_token_created_at] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_opensecure_channel_sec_token_created_at_zero"
+               remove_field => [ "[zeek][opcua_binary_opensecure_channel][sec_token_created_at]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_opensecure_channel_sec_token_created_at"
+        match => [ "[zeek][opcua_binary_opensecure_channel][sec_token_created_at]", "UNIX" ]
+        target => "[zeek][opcua_binary_opensecure_channel][sec_token_created_at]"
       }
     }
   }
