--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -88,17 +88,26 @@ filter {
   if ([zeek][ldap][version])                      { mutate { id => "mutate_merge_normalize_zeek_ldap_version"
                                                             merge => { "[network][protocol_version]" => "[zeek][ldap][version]" } } }
 
-  if ([zeek][ntp][version])                      { mutate { id => "mutate_merge_normalize_zeek_ntp_version"
-                                                           merge => { "[network][protocol_version]" => "[zeek][ntp][version]" } } }
+  if ([zeek][ntp][version])                       { mutate { id => "mutate_merge_normalize_zeek_ntp_version"
+                                                            merge => { "[network][protocol_version]" => "[zeek][ntp][version]" } } }
+
+  if ([zeek][opcua_binary][version])                              { mutate { id => "mutate_merge_normalize_zeek_opcua_binary_version"
+                                                                             merge => { "[network][protocol_version]" => "[zeek][opcua_binary][version]" } } }
+
+  if ([zeek][opcua_binary_opensecure_channel][client_proto_ver])  { mutate { id => "mutate_merge_normalize_zeek_opcua_binary_opensecure_channel_client_proto_version"
+                                                                             merge => { "[network][protocol_version]" => "[zeek][opcua_binary_opensecure_channel][client_proto_ver]" } } }
+
+  if ([zeek][opcua_binary_opensecure_channel][server_proto_ver])  { mutate { id => "mutate_merge_normalize_opcua_binary_opensecure_channel_server_proto_version"
+                                                                             merge => { "[network][protocol_version]" => "[zeek][opcua_binary_opensecure_channel][server_proto_ver]" } } }
 
   if ([zeek][ospf][version])                      { mutate { id => "mutate_merge_normalize_zeek_ospf_version"
                                                              merge => { "[network][protocol_version]" => "[zeek][ospf][version]" } } }
 
-  if ([zeek][profinet][block_version])           { mutate { id => "mutate_merge_normalize_zeek_profinet_block_version"
-                                                           merge => { "[network][protocol_version]" => "[zeek][profinet][block_version]" } } }
+  if ([zeek][profinet][block_version])            { mutate { id => "mutate_merge_normalize_zeek_profinet_block_version"
+                                                              merge => { "[network][protocol_version]" => "[zeek][profinet][block_version]" } } }
 
-  if ([zeek][profinet_dce_rpc][version])         { mutate { id => "mutate_merge_normalize_zeek_profinet_dce_rpc_version"
-                                                           merge => { "[network][protocol_version]" => "[zeek][profinet_dce_rpc][version]" } } }
+  if ([zeek][profinet_dce_rpc][version])          { mutate { id => "mutate_merge_normalize_zeek_profinet_dce_rpc_version"
+                                                             merge => { "[network][protocol_version]" => "[zeek][profinet_dce_rpc][version]" } } }
 
   if ([zeek][rfb]) {
     ruby {
@@ -332,6 +341,18 @@ filter {
 
   if ([zeek][ospf][ospf_type])                   { mutate { id => "mutate_merge_normalize_zeek_ospf_ospf_type"
                                                             merge => { "[event][action]" => "[zeek][ospf][ospf_type]" } } }
+
+  if ([zeek][opcua_binary][msg_type] or [zeek][opcua_binary][identifier_str]) {
+    ruby {
+      # action = msg_type:identifier_str
+      id => "ruby_zeek_opcua_binary_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[event][action]'))
+        actions.append([event.get('[zeek][opcua_binary][msg_type]'),
+                        event.get('[zeek][opcua_binary][identifier_str]')].compact.join(':'))
+        event.set('[event][action]', actions)"
+    }
+  }
 
   if ([zeek][profinet][operation_type])          { mutate { id => "mutate_merge_normalize_zeek_profinet_operation_type"
                                                            merge => { "[event][action]" => "[zeek][profinet][operation_type]" } } }
@@ -723,6 +744,16 @@ filter {
              merge => { "[event][result]" => "[@metadata][zeek_ntlm_result]" } }
   }
 
+  if ([zeek][opcua_binary_status_code_detail]) {
+    if ([zeek][opcua_binary_status_code_detail][sub_code_str]) {
+      mutate { id => "mutate_merge_zeek_opcua_binary_status_code_detail_sub_code_str_result"
+               merge => { "[event][result]" => "[zeek][opcua_binary_status_code_detail][sub_code_str]" } }
+    } else if if ([zeek][opcua_binary_status_code_detail][status_code]) {
+      mutate { id => "mutate_merge_zeek_opcua_binary_status_code_detail_status_code_result"
+               merge => { "[event][result]" => "[zeek][opcua_binary_status_code_detail][status_code]" } }
+    }
+  }
+
   if ([zeek][radius][result]) {
     if ([zeek][radius][result] =~ /^(?i)succ/) {
       mutate { id => "mutate_add_field_zeek_radius_success"
@@ -929,7 +960,7 @@ filter {
   }
 
   #####################################################################################################################
-  # remove any duplicates from action and result
+  # standardization of result
 
   if ([event][result]) {
     # ECS - event.result -> event.outcome
@@ -1131,6 +1162,60 @@ filter {
   # ECS - various -> related.hosts (a lot of these are actually done in the enrichment pipeline)
   if ([zeek][gquic][server_name]) {              mutate { id => "mutate_merge_field_related_hosts"
                                                           merge => { "[related][hosts]" => "[zeek][gquic][server_name]" } } }
+
+  # URLs/URIs #########################################################################################################
+  # ECS - various -> url.original
+
+  if ([zeek][opcua_binary][endpoint_url]) {                                       mutate { id => "mutate_merge_field_zeek_opcua_binary_endpoint_url_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary][endpoint_url]" } } }
+
+  if ([zeek][opcua_binary][sec_policy_uri]) {                                     mutate { id => "mutate_merge_field_zeek_opcua_binary_sec_policy_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary][sec_policy_uri]" } } }
+
+  if ([zeek][opcua_binary_diag_info_detail][namespace_uri_str]) {                 mutate { id => "mutate_merge_field_zeek_opcua_binary_diag_info_detail_namespace_uri_str_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_diag_info_detail][namespace_uri_str]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints][application_uri]) {                      mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_application_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][application_uri]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints][endpoint_url]) {                         mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_endpoint_url_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][endpoint_url]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints][gateway_server_uri]) {                   mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_gateway_server_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][gateway_server_uri]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints][product_uri]) {                          mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_product_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][product_uri]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints][profile_uri]) {                          mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_profile_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][profile_uri]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints][security_policy_uri]) {                  mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_security_policy_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][security_policy_uri]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints][transport_profile_uri]) {                mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_transport_profile_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints][transport_profile_uri]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints_discovery][discovery_profile_uri]) {      mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_discovery_discovery_profile_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_discovery][discovery_profile_uri]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints_discovery][discovery_profile_url]) {      mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_discovery_discovery_profile_url_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_discovery][discovery_profile_url]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints_user_token][user_token_endpoint_url]) {   mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_user_token_user_token_endpoint_url_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_endpoint_url]" } } }
+
+  if ([zeek][opcua_binary_get_endpoints_user_token][user_token_sec_policy_uri]) { mutate { id => "mutate_merge_field_zeek_opcua_binary_get_endpoints_user_token_user_token_sec_policy_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_sec_policy_uri]" } } }
+
+  if ([zeek][software][url]) {                                                    mutate { id => "mutate_merge_field_zeek_software_url_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][software][url]" } } }
+
+  if ([zeek][sip][uri]) {                                                         mutate { id => "mutate_merge_field_zeek_sip_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][sip][uri]" } } }
+
+  if ([zeek][x509][san_uri]) {                                                    mutate { id => "mutate_merge_field_zeek_x509_san_uri_url_original"
+                                                                                           merge => { "[url][original]" => "[zeek][x509][san_uri]" } } }
 
   # IP addresses ######################################################################################################
   # ECS - various -> related.ip (all IP-type fields get rolled up into related.ip)
