temporarily switch to my PR branch for getting service into conn.log, and set the same service in the network.protocol field

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2604,7 +2604,7 @@ filter {
 
     mutate { id => "mutate_add_fields_zeek_service_opcua_binary_diag_info_detail"
              add_field => { "[zeek_cols][proto]" => "tcp"
-                            "[zeek_cols][service]" => "opcua-bin" } }
+                            "[zeek_cols][service]" => "opcua-binary" } }
 
     mutate { id => "mutate_add_tag_ics_opcua_binary_diag_info_detail"
              add_tag => [ "ics" ] }
@@ -2637,7 +2637,7 @@ filter {
 
     mutate { id => "mutate_add_fields_zeek_service_opcua_binary_get_endpoints"
              add_field => { "[zeek_cols][proto]" => "tcp"
-                            "[zeek_cols][service]" => "opcua-bin" } }
+                            "[zeek_cols][service]" => "opcua-binary" } }
 
     mutate { id => "mutate_add_tag_ics_opcua_binary_get_endpoints"
              add_tag => [ "ics" ] }
@@ -2670,7 +2670,7 @@ filter {
 
     mutate { id => "mutate_add_fields_zeek_service_opcua_binary_get_endpoints_discovery"
              add_field => { "[zeek_cols][proto]" => "tcp"
-                            "[zeek_cols][service]" => "opcua-bin" } }
+                            "[zeek_cols][service]" => "opcua-binary" } }
 
     mutate { id => "mutate_add_tag_ics_opcua_binary_get_endpoints_discovery"
              add_tag => [ "ics" ] }
@@ -2703,7 +2703,7 @@ filter {
 
     mutate { id => "mutate_add_fields_zeek_service_opcua_binary_get_endpoints_user_token"
              add_field => { "[zeek_cols][proto]" => "tcp"
-                            "[zeek_cols][service]" => "opcua-bin" } }
+                            "[zeek_cols][service]" => "opcua-binary" } }
 
     mutate { id => "mutate_add_tag_ics_opcua_binary_get_endpoints_user_token"
              add_tag => [ "ics" ] }
@@ -2736,7 +2736,7 @@ filter {
 
     mutate { id => "mutate_add_fields_zeek_service_opcua_binary"
              add_field => { "[zeek_cols][proto]" => "tcp"
-                            "[zeek_cols][service]" => "opcua-bin" } }
+                            "[zeek_cols][service]" => "opcua-binary" } }
 
     mutate { id => "mutate_add_tag_ics_opcua_binary"
              add_tag => [ "ics" ] }
@@ -2769,7 +2769,7 @@ filter {
 
     mutate { id => "mutate_add_fields_zeek_service_opcua_binary_opensecure_channel"
              add_field => { "[zeek_cols][proto]" => "tcp"
-                            "[zeek_cols][service]" => "opcua-bin" } }
+                            "[zeek_cols][service]" => "opcua-binary" } }
 
     mutate { id => "mutate_add_tag_ics_opcua_binary_opensecure_channel"
              add_tag => [ "ics" ] }
@@ -2802,7 +2802,7 @@ filter {
 
     mutate { id => "mutate_add_fields_zeek_service_opcua_binary_status_code_detail"
              add_field => { "[zeek_cols][proto]" => "tcp"
-                            "[zeek_cols][service]" => "opcua-bin" } }
+                            "[zeek_cols][service]" => "opcua-binary" } }
 
     mutate { id => "mutate_add_tag_ics_opcua_binary_opcua_binary_status_code_detail"
              add_tag => [ "ics" ] }
