tag opcua-binary traffic in conn.log as ICS

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4325,6 +4325,7 @@ filter {
         ("enip" in [network][protocol]) or
         ("ethercat" in [network][protocol]) or
         ("iso_cotp" in [network][protocol]) or
+        ("opcua-binary" in [network][protocol]) or
         ("modbus" in [network][protocol]) or
         ("profinet" in [network][protocol]) or
         ("profinet_dce_rpc" in [network][protocol]) or
