Added option for completely disabling authentication

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -166,7 +166,7 @@ http {
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
     }
 
@@ -221,7 +221,7 @@ http {
       proxy_pass http://arkime/cyberchef/$1;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
     }
 
@@ -235,7 +235,7 @@ http {
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
     }
   }
@@ -259,7 +259,7 @@ http {
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
     }
 
