--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -104,7 +104,7 @@ http {
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
     }
 
@@ -151,7 +151,7 @@ http {
       proxy_pass http://arkime/cyberchef/$1;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
     }
 
@@ -170,7 +170,7 @@ http {
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
     }
   }
