--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -35,6 +35,7 @@ export ZEEK_AF_PACKET_BUFFER_SIZE=67108864
 
 export ZEEK_RULESET=local
 export ZEEK_INTEL_ITEM_EXPIRATION=-1min
+export ZEEK_INTEL_FEED_SINCE=
 export ZEEK_EXTRACTOR_MODE=none
 export ZEEK_EXTRACTOR_OVERRIDE_FILE=
 export EXTRACTED_FILE_MIN_BYTES=64
